Fix Stat Shiting selectors on small width sheets

--- a/src/styles/src/global/components/_stats.scss
+++ b/src/styles/src/global/components/_stats.scss
@@ -94,6 +94,7 @@
             font-weight: bold;
             color: #fff;
             padding-left: 10px;
+            max-width: calc(50% - 2px);
 
             &.up {
               background: url(/icons/svg/up.svg) no-repeat -10% rgba(0,0,0,.25);
